[gd_scene load_steps=15 format=3 uid="uid://1raaa5183fu2"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_1e4vt"]
[ext_resource type="Script" path="res://Scripts/ParallaxBackground.gd" id="2_tpfjc"]
[ext_resource type="Texture2D" uid="uid://vymxhwi80voe" path="res://Assets/Backgrounds/Sky_Background_0.png" id="2_ynudc"]
[ext_resource type="Texture2D" uid="uid://bxwkh4a74f6rn" path="res://Assets/Backgrounds/Sky_Background_1.png" id="3_1ouos"]
[ext_resource type="Texture2D" uid="uid://bu7ve5w1gc283" path="res://Assets/Backgrounds/Sky_Background_2.png" id="4_eotbp"]
[ext_resource type="FontFile" uid="uid://bhrtrt4jyvcpy" path="res://Assets/Fonts/Fuente-Metal-Slug-Latino-master/Metal Slug Latino Regular.ttf" id="5_urpyf"]
[ext_resource type="FontFile" uid="uid://bssi4f8okwtq7" path="res://Assets/Fonts/Fuente-Metal-Slug-Latino-master/Metal Slug Latino Regular.otf" id="6_6w5ju"]
[ext_resource type="Texture2D" uid="uid://dctmu3c5xdjcn" path="res://Assets/Sprites/mario-idle.png" id="8_xls7f"]
[ext_resource type="Texture2D" uid="uid://dw8dxyfkf5bpu" path="res://Assets/Sprites/rpg.png" id="9_8a0kj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o337n"]
bg_color = Color(0.866667, 0.34902, 0.227451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ltq2"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6u2d"]
atlas = ExtResource("8_xls7f")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b840c"]
atlas = ExtResource("8_xls7f")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5wnbo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6u2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b840c")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[node name="MainMenu" type="Node"]
script = ExtResource("1_1e4vt")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("2_tpfjc")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1146, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(573, 324)
scale = Vector2(3.5875, 3.58889)
texture = ExtResource("2_ynudc")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1142, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(590.5, 318.5)
scale = Vector2(3.66562, 3.76111)
texture = ExtResource("3_1ouos")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1134, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(577.5, 326)
scale = Vector2(3.58437, 3.56667)
texture = ExtResource("4_eotbp")

[node name="Timer" type="Timer" parent="ParallaxBackground"]

[node name="Background" type="TextureRect" parent="."]
visible = false
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ynudc")

[node name="Background2" type="TextureRect" parent="."]
visible = false
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_1ouos")

[node name="Background3" type="TextureRect" parent="."]
visible = false
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_eotbp")

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = 209.0
offset_right = 108.0
offset_bottom = 265.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_urpyf")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_o337n")
theme_override_styles/hover = SubResource("StyleBoxFlat_5ltq2")
text = "play game"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(573, 375)
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_5wnbo")
autoplay = "default"

[node name="Sprite2D" type="Sprite2D" parent="AnimatedSprite2D"]
position = Vector2(-6.1, -1.9)
rotation = 1.67186
texture = ExtResource("9_8a0kj")
flip_h = true
flip_v = true

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -443.0
offset_top = -182.0
offset_right = 468.0
offset_bottom = -79.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.992157, 0.862745, 0.376471, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_6w5ju")
theme_override_font_sizes/font_size = 100
text = "SUPER RPG WORLD"

[connection signal="timeout" from="ParallaxBackground/Timer" to="ParallaxBackground" method="_on_timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
